--- a/app/src/main/res/layout/activity_phone_verification.xml
+++ b/app/src/main/res/layout/activity_phone_verification.xml
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumber" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fabPhoneVerification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -73,11 +73,11 @@
         android:indeterminateTint="@color/white"
         android:indeterminateTintMode="src_atop"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/fab"
-        app:layout_constraintEnd_toEndOf="@+id/fab"
+        app:layout_constraintBottom_toBottomOf="@+id/fabPhoneVerification"
+        app:layout_constraintEnd_toEndOf="@+id/fabPhoneVerification"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/fab"
-        app:layout_constraintTop_toTopOf="@+id/fab"
+        app:layout_constraintStart_toStartOf="@+id/fabPhoneVerification"
+        app:layout_constraintTop_toTopOf="@+id/fabPhoneVerification"
         app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
