--- a/app/src/main/res/drawable/background_circle.xml
+++ b/app/src/main/res/drawable/background_circle.xml
@@ -4,4 +4,6 @@
     <solid android:color="#32C64A" />
     <size android:width="10dp"
         android:height="10dp" />
+    <stroke android:color="@color/white"
+        android:width="1dp" />
 </shape>
