--- a/app/src/main/res/layout/item_container_chat.xml
+++ b/app/src/main/res/layout/item_container_chat.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -17,7 +16,7 @@
         app:layout_constraintStart_toStartOf="@+id/chatContainerImageCardView"
         app:layout_constraintTop_toTopOf="@+id/chatContainerImageCardView"
         app:layout_constraintVertical_bias="0.95"
-        app:srcCompat="@drawable/round" />
+        app:srcCompat="@drawable/background_circle" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/chatContainerImageCardView"
