--- a/app/src/main/res/drawable/background_chat_input.xml
+++ b/app/src/main/res/drawable/background_chat_input.xml
@@ -3,4 +3,6 @@
     android:shape="rectangle">
     <solid android:color="@color/blue_1"/>
     <corners android:radius="24dp" />
+    <stroke android:width="0.5dp"
+        android:color="#434343"/>
 </shape>
