--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_chat_content"
     tools:context=".ChatActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -54,7 +55,7 @@
                 android:id="@+id/textViewReceiverUsername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
+                android:layout_marginStart="8dp"
                 android:text="Username"
                 android:textColor="@color/white"
                 android:textSize="20sp"
@@ -71,10 +72,10 @@
         android:id="@+id/cardViewSend"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="12dp"
-        app:cardCornerRadius="100dp"
         app:cardBackgroundColor="@color/blue_1"
+        app:cardCornerRadius="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -93,7 +94,7 @@
         android:id="@+id/editTextInputMsg"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="12dp"
         android:background="@drawable/background_chat_input"
@@ -110,10 +111,14 @@
         android:id="@+id/messagesRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/editTextInputMsg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarChatActivity" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbarChatActivity"
+        app:stackFromEnd="true" />
 </androidx.constraintlayout.widget.ConstraintLayout>
